Not the correct height for the banner on mobile

--- a/css/creative.css
+++ b/css/creative.css
@@ -9663,7 +9663,7 @@ header.masthead {
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
-  height: 30vh;
+  height: 50vh;
 }
 
 header.masthead h1 {
