--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -9,7 +9,7 @@ header.masthead {
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
-  height: 30vh;
+  height: 50vh;
   h1 {
     font-size: 2.25rem;
   }
